# CerradoWatch

./: .env.example  .gitignore  Dockerfile  Dockerfile.pipeline  Makefile  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  pipeline.yml
.streamlit/: config.toml
api/: database.py  main.py
api/routers/: clima.py  desmatamento.py  kpis.py  queimadas.py
dashboard/: __init__.py  app.py  data.py
dashboard/pages/: 1_🔥_Queimadas.py  2_🌳_Desmatamento.py  3_🌡️_Clima.py  4_📈_Precos.py  5_ℹ️_Sobre.py
data/samples/: firms_cerrado_sample.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/mart/: mart_cerrado_kpis.sql  mart_climate_monthly.sql  mart_deforestation_annual.sql  mart_fires_weekly.sql  mart_prices_monthly.sql  schema.yml
dbt/models/staging/: schema.yml  stg_conab__prices.sql  stg_firms__fires.sql  stg_inmet__observations.sql  stg_prodes__deforestation.sql
docs/adr/: 001-tech-stack.md
ingestion/: __init__.py  config.py  database.py  models.py
ingestion/conab/: __init__.py  connector.py  schema.py
ingestion/firms/: __init__.py  connector.py  models.py  schema.py
ingestion/inmet/: __init__.py  connector.py  schema.py
ingestion/prodes/: __init__.py  connector.py  schema.py
orchestration/: __init__.py  alerts.py  run_pipeline.py  weekly_fires_flow.py
scripts/: init_db.sql  parse_db_url.py
tests/: test_alerts.py  test_conab_connector.py  test_firms_connector.py  test_inmet_connector.py  test_prodes_connector.py
